--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "javascript-state-machine": "^3.1.0",
     "jsonwebtoken": "^8.5.1"
   }
 }
