--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "express": "^4.17.1",
     "javascript-state-machine": "^3.1.0",
     "jsonwebtoken": "^8.5.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1"
   }
 }
