--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   },
   "devDependencies": {
     "eslint": "^6.5.1"
+  },
+  "scripts": {
+    "start": "node ./index.js",
+    "lint": "eslint ./index.js"
   }
 }
