--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dingo-stories",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "https://github.com/juz501/dingo-stories",
   "author": "Julian Chan",
   "license": "MIT",
@@ -11,10 +11,13 @@
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "eslint": "^6.5.1"
+    "eslint": "^6.5.1",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
   },
   "scripts": {
+    "build": "webpack",
     "start": "node ./index.js",
-    "lint": "eslint ./index.js"
+    "lint": "eslint ./src/**/*.js"
   }
 }
