--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "dingo-stories",
-  "version": "1.0.0",
-  "main": "dist/index.js",
+  "version": "1.1.0",
+  "main": "index.js",
   "repository": "https://github.com/juz501/dingo-stories",
   "author": "Julian Chan",
   "license": "MIT",
   "dependencies": {
+    "amqplib": "^0.5.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "javascript-state-machine": "^3.1.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
-    "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   },
   "scripts": {
-    "build": "webpack",
-    "serve": "node ./index.js",
-    "start": "yarn lint && yarn build && yarn serve",
-    "lint": "eslint ./src/**/*.js"
+    "rabbit": "docker-compose up --build --remove-orphans --force-recreate",
+    "state": "sleep 10 && node ./src/state-machine.js",
+    "serve": "sleep 12 && node ./index.js",
+    "start": "yarn lint && npm-run-all -p -r rabbit state serve",
+    "lint": "eslint ./src/**/*.js ./index.js"
   }
 }
