--- a/package.json
+++ b/package.json
@@ -7,17 +7,38 @@
   "license": "MIT",
   "dependencies": {
     "amqplib": "^0.5.5",
+    "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "javascript-state-machine": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.3",
+    "@babel/preset-env": "^7.6.3",
+    "autoprefixer": "^9.6.4",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
-    "webpack-cli": "^3.3.9"
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "terser-webpack-plugin": "^2.1.2",
+    "webpack": "^4.41.0",
+    "webpack-clean-obsolete-chunks": "^0.4.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-fix-style-only-entries": "^0.4.0"
   },
   "scripts": {
+    "build": "webpack",
+    "watch": "webpack --watch",
     "rabbit": "docker-compose up --build --remove-orphans --force-recreate",
     "state": "sleep 10 && node ./src/state-machine.js",
     "serve": "sleep 12 && node ./index.js",
