--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "amqplib": "^0.5.5",
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "javascript-state-machine": "^3.1.0",
